--- a/package.json
+++ b/package.json
@@ -3,17 +3,20 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "heroku-postbuild": "ng build --prod"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.1.1",
     "@angular/common": "~11.1.1",
     "@angular/compiler": "~11.1.1",
+    "@angular/cli": "~11.1.2",
+    "@angular/compiler-cli": "~11.1.1",
     "@angular/core": "~11.1.1",
     "@angular/forms": "~11.1.1",
     "@angular/localize": "^11.2.0",
@@ -25,7 +28,8 @@
     "ngx-cookie-service": "^11.0.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.11.3"
+    "zone.js": "~0.11.3",
+    "typescript": "~4.1.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1101.2",
@@ -45,5 +49,9 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.1.2"
+  },
+  "engines": {
+    "node": "14.15.4",
+    "npm": "6.14.10"
   }
 }
