--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.1.1",
+    "@angular/cli": "~11.1.2",
     "@angular/common": "~11.1.1",
     "@angular/compiler": "~11.1.1",
-    "@angular/cli": "~11.1.2",
     "@angular/compiler-cli": "~11.1.1",
     "@angular/core": "~11.1.1",
     "@angular/forms": "~11.1.1",
@@ -25,11 +25,12 @@
     "@angular/router": "~11.1.1",
     "@ng-bootstrap/ng-bootstrap": "^9.0.2",
     "bootstrap": "^4.6.0",
+    "ng2-date-picker": "^11.0.0",
     "ngx-cookie-service": "^11.0.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.11.3",
-    "typescript": "~4.1.2"
+    "typescript": "~4.1.2",
+    "zone.js": "~0.11.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1101.2",
